@@ -78,6 +78,7 @@ slash.  Any content in these directories will be removed as well.
 
 init(options => {
 	"dirs-only" => \$dh{D_FLAG},
+	"keep|k" => \$dh{K_FLAG},
 });
 inhibit_log();
 
