@@ -137,7 +137,7 @@ Debian policy, version 3.0.1
 =cut
 
 init(options => {
-	"keep-debug"         => \$dh{K_FLAG},
+	'keep-debug|keep|k'  => \$dh{K_FLAG},
 	'dbgsym-migration=s' => \$dh{MIGRATE_DBGSYM},
 	'automatic-dbgsym!'  => \$dh{ENABLE_DBGSYM},
     # Deprecated variants
