@@ -114,7 +114,6 @@ switch		variable	description
 				only be used inside complex_doit(), not in
 				doit().
 -d		D_FLAG		you decide what this means to your program
--k		K_FLAG		used to turn on keeping of something
 -P		TMPDIR		package build directory (implies only one
 				package is being acted on)
 -u		U_PARAMS	will be set to a string, that is typically
