@@ -50,6 +50,14 @@ debhelper (11.4) UNRELEASED; urgency=medium
     auto-generated postrm script.  The systemd package has a trigger for
     handling sysvinit scripts and dh_installsystemd handles the requirement
     for native systemd unit files.
+  * dh_clean: Explicitly declare the -k/--keep parameter with the intend
+    to remove it from the default debhelper options.
+  * dh_installchangelogs: Ditto.
+  * dh_strip: Ditto.
+  * Dh_Getopt.pm: Remove -k/--keep from the list of options supported by all
+    debhelper tools.  The only external consumer was dh_gtkmodules which is now
+    deprecated and a "noop" dh_installtex.  No consumers of dh_gtkmodules
+    appear to pass -k/--keep to dh_gtkmodules any longer.
 
   [ Juhani Numminen ]
   * dh_installsystemd.1: Fix typo in manpage.
